Google_Cloud/gke_standard_gateway_api/manifests/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hello-app-service
spec:
  selector:
    app: go-hello-app
  ports:
  - port: 8900
    targetPort: 8900
    protocol: TCP
  type: NodePort
