Google_Cloud/gke_standard_gateway_api/manifests/03_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: go-hello-app-gtw
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - protocol:
    port: 80
    name: go-hello-app-http
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: go-hello-app-route
spec:
  parentRefs:
  - kind: Gateway
    name: go-hello-app-gtw
  rules:
  - backendRefs:
    - name: go-hello-app-service
      port: 8900
  - matches:
    - path:
        value: "/"
